--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html><html><head><title>(Yet Another) X-Wing Miniatures Squad Builder</title><meta charset="utf-8"><link rel="stylesheet" href="bootstrap/css/bootstrap.min.css?1518715713"><link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css?1518715713"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><link href="bootstrap/css/bootstrap-responsive.css?1518715713" rel="stylesheet" media="screen"><link rel="stylesheet" href="select2-3.4.0/select2.css?1518715713"><link rel="stylesheet" href="stylesheets/xwing.css?1518715713"><link rel="stylesheet" href="stylesheets/xwing-screen.css?1518715713" media="screen,handheld"><link rel="stylesheet" href="stylesheets/xwing-print.css?1518715713" media="print"><link rel="stylesheet" href="stylesheets/backgrounds.css?1518715713" media="screen,handheld"><link rel="stylesheet" href="bower_components/xwing-miniatures-font/xwing-miniatures.css?1518715713" media="screen,handheld,print"></head><body><!-- body layout--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-43758422-1', 'geordanr.github.io');
-</script><div class="tabbable hidden-print"><ul class="nav nav-pills"><li><a id="rebelTab" data-toggle="tab" href="#rebelContent">Rebel Alliance</a></li><li><a id="empireTab" data-toggle="tab" href="#empireContent">Galactic Empire</a></li><li><a id="scumTab" data-toggle="tab" href="#scumContent">Scum and Villainy</a></li><li><a id="browserTab" data-toggle="tab" href="#browserContent">Card Browser</a></li><li><a id="aboutTab" data-toggle="tab" href="#aboutContent">About</a></li><li class="dropdown language-picker"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="language-placeholder"></span><b class="caret"></b></a><ul class="dropdown-menu"></ul></li><li><a id="auth-status" href="#"><i class="fa fa-spinner fa-spin"></i><span class="payload"></span></a></li><li><a class="hidden" id="login-logout" href="#"><span class="hide-authenticated"><i class="fa fa-sign-in hidden-phone hidden-tablet"></i>Log In</span><span class="show-authenticated"><i class="fa fa-sign-out hidden-phone hidden-tablet"></i>Log Out</span></a></li><li><a href="https://github.com/geordanr/xwing/issues/new" target="_blank">Submit Bug/Feature Request</a></li></ul><div class="tab-content"><div class="tab-pane" id="rebelContent"><div id="rebel-builder"></div></div><div class="tab-pane" id="empireContent"><div id="empire-builder"></div></div><div class="tab-pane" id="scumContent"><div id="scum-builder"></div></div><div class="tab-pane" id="browserContent"><div id="card-browser"></div></div><div class="tab-pane" id="aboutContent"><div class="container-fluid"><div class="row-fluid"><div class="span8"><h2>(Yet Another) X-Wing Miniatures Squad Builder</h2><p><p>This is a simple, fast, no-frills squad builder for <a href="http://www.fantasyflightgames.com/edge_minisite.asp?eidm=174&amp;enmi=X-Wing">X-Wing Miniatures</a> by <a href="http://www.fantasyflightgames.com/index.asp">Fantasy Flight Games</a>.  It is pure HTML, JavaScript, and CSS and requires no backend, and can be dropped into place on any website (with maybe a few CSS tweaks).</p>
+<!DOCTYPE html><html><head><title>(Yet Another) X-Wing Miniatures Squad Builder</title><meta charset="utf-8"><link rel="stylesheet" href="bootstrap/css/bootstrap.min.css?1519504814"><link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css?1519504814"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><link href="bootstrap/css/bootstrap-responsive.css?1519504814" rel="stylesheet" media="screen"><link rel="stylesheet" href="select2-3.4.0/select2.css?1519504814"><link rel="stylesheet" href="stylesheets/xwing.css?1519504814"><link rel="stylesheet" href="stylesheets/xwing-screen.css?1519504814" media="screen,handheld"><link rel="stylesheet" href="stylesheets/xwing-print.css?1519504814" media="print"><link rel="stylesheet" href="stylesheets/backgrounds.css?1519504814" media="screen,handheld"><link rel="stylesheet" href="bower_components/xwing-miniatures-font/xwing-miniatures.css?1519504814" media="screen,handheld,print"></head><body><!-- body layout--><div class="tabbable hidden-print"><ul class="nav nav-pills"><li><a id="rebelTab" data-toggle="tab" href="#rebelContent">Rebel Alliance</a></li><li><a id="empireTab" data-toggle="tab" href="#empireContent">Galactic Empire</a></li><li><a id="scumTab" data-toggle="tab" href="#scumContent">Scum and Villainy</a></li><li><a id="browserTab" data-toggle="tab" href="#browserContent">Card Browser</a></li><li><a id="aboutTab" data-toggle="tab" href="#aboutContent">About</a></li><li class="dropdown language-picker"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="language-placeholder"></span><b class="caret"></b></a><ul class="dropdown-menu"></ul></li><li><a id="auth-status" href="#"><i class="fa fa-spinner fa-spin"></i><span class="payload"></span></a></li><li><a class="hidden" id="login-logout" href="#"><span class="hide-authenticated"><i class="fa fa-sign-in hidden-phone hidden-tablet"></i>Log In</span><span class="show-authenticated"><i class="fa fa-sign-out hidden-phone hidden-tablet"></i>Log Out</span></a></li><li><a href="https://github.com/geordanr/xwing/issues/new" target="_blank">Submit Bug/Feature Request</a></li></ul><div class="tab-content"><div class="tab-pane" id="rebelContent"><div id="rebel-builder"></div></div><div class="tab-pane" id="empireContent"><div id="empire-builder"></div></div><div class="tab-pane" id="scumContent"><div id="scum-builder"></div></div><div class="tab-pane" id="browserContent"><div id="card-browser"></div></div><div class="tab-pane" id="aboutContent"><div class="container-fluid"><div class="row-fluid"><div class="span8"><h2>(Yet Another) X-Wing Miniatures Squad Builder</h2><p><p>This is a simple, fast, no-frills squad builder for <a href="http://www.fantasyflightgames.com/edge_minisite.asp?eidm=174&amp;enmi=X-Wing">X-Wing Miniatures</a> by <a href="http://www.fantasyflightgames.com/index.asp">Fantasy Flight Games</a>.  It is pure HTML, JavaScript, and CSS and requires no backend, and can be dropped into place on any website (with maybe a few CSS tweaks).</p>
 
 <p>Icons and fonts courtesy GeckoTH&#39;s excellent PSD, available on <a href="http://www.afewmaneuvers.com/forums/viewtopic.php?f=28&amp;t=183">A Few Maneuvers</a>.</p>
 
@@ -35,7 +30,7 @@ ga('create', 'UA-43758422-1', 'geordanr.github.io');
 
 <p>A backend is available if the ability to save squadrons is needed; it can be <a href="http://github.com/geordanr/xwing-backend">forked on GitHub here</a>.  You can view the privacy policy <a href="privacy.html">here</a>.</p>
 
-<p>This builder is unofficial and is not affiliated with Fantasy Flight Games, Lucasfilm Ltd., or Disney.</p></p></div></div></div></div></div></div><div class="footer"><div class="msie8-hax"></div></div><div class="visible-print" id="printable"><div class="printable-header"></div><div class="printable-body"></div><div class="printable-footer">Created at<strong class="site-placeholder"></strong></div></div><!-- JS linkages--><script src="bower_components/jquery/js/jquery.min.js?1518715713"></script><!-- script(src="http://code.jquery.com/jquery-migrate-1.2.1.js")--><script src="bower_components/jquery-ajaxtransport-xdomainrequest/jquery.xdomainrequest.min.js?1518715713"></script><script src="bootstrap/js/bootstrap.min.js?1518715713"></script><script src="select2-3.4.0/select2.min.js?1518715713"></script><script src="bower_components/jquery.qrcode/js/jquery-qrcode.min.js?1518715713"></script><script src="javascripts/xwing.min.js?1518715713"></script><script>(function() {
+<p>This builder is unofficial and is not affiliated with Fantasy Flight Games, Lucasfilm Ltd., or Disney.</p></p></div></div></div></div></div></div><div class="footer"><div class="msie8-hax"></div></div><div class="visible-print" id="printable"><div class="printable-header"></div><div class="printable-body"></div><div class="printable-footer">Created at<strong class="site-placeholder"></strong></div></div><!-- JS linkages--><script src="bower_components/jquery/js/jquery.min.js?1519504814"></script><!-- script(src="http://code.jquery.com/jquery-migrate-1.2.1.js")--><script src="bower_components/jquery-ajaxtransport-xdomainrequest/jquery.xdomainrequest.min.js?1519504814"></script><script src="bootstrap/js/bootstrap.min.js?1519504814"></script><script src="select2-3.4.0/select2.min.js?1519504814"></script><script src="bower_components/jquery.qrcode/js/jquery-qrcode.min.js?1519504814"></script><script src="javascripts/xwing.js?1519504814"></script><script>(function() {
   $(function() {
     window.setupTranslationSupport();
     switch (window.location.hash) {
@@ -49,36 +44,6 @@ ga('create', 'UA-43758422-1', 'geordanr.github.io');
         window.location.replace('?f=Scum and Villainy');
     }
     $('.site-placeholder').text("http://\#{window.location.host}\#{window.location.pathname}");
-    $('#rebelTab').click(function(e) {
-      return ga('send', 'pageview', {
-        page: '/rebels',
-        title: 'Rebel Alliance'
-      });
-    });
-    $('#empireTab').click(function(e) {
-      return ga('send', 'pageview', {
-        page: '/empire',
-        title: 'Galactic Empire'
-      });
-    });
-    $('#scumTab').click(function(e) {
-      return ga('send', 'pageview', {
-        page: '/scum',
-        title: 'Scum and Villainy'
-      });
-    });
-    $('#browserTab').click(function(e) {
-      return ga('send', 'pageview', {
-        page: '/browser',
-        title: 'Card Browser'
-      });
-    });
-    $('#aboutTab').click(function(e) {
-      return ga('send', 'pageview', {
-        page: '/about',
-        title: 'About'
-      });
-    });
     window.rebel_sb = new window.SquadBuilder({
       tab: '#rebelTab',
       faction: 'Rebel Alliance',
@@ -102,31 +67,15 @@ ga('create', 'UA-43758422-1', 'geordanr.github.io');
     window.registerBuilderForTranslation(window.scum_sb);
     switch ($.getParameterByName('f')) {
       case 'Rebel Alliance':
-        ga('send', 'pageview', {
-          page: '/rebels',
-          title: 'Rebel Alliance'
-        });
         $('#rebelTab').tab('show');
         break;
       case 'Galactic Empire':
-        ga('send', 'pageview', {
-          page: '/empire',
-          title: 'Galactic Empire'
-        });
         $('#empireTab').tab('show');
         break;
       case 'Scum and Villainy':
-        ga('send', 'pageview', {
-          page: '/scum',
-          title: 'Scum and Villainy'
-        });
         $('#scumTab').tab('show');
         break;
       default:
-        ga('send', 'pageview', {
-          page: '/rebels',
-          title: 'Rebel Alliance'
-        });
         $('#rebelTab').tab('show');
     }
     window.backend = new SquadBuilderBackend({
@@ -157,4 +106,4 @@ ga('create', 'UA-43758422-1', 'geordanr.github.io');
   });
 
 }).call(this);
-</script></body></html><div id="xws"></div><div class="font-hax"><span style="font-family: BankGothicHD;">&nbsp;</span><span style="font-family: kimberley;">&nbsp;</span><span style="font-family: XWing;">&nbsp;</span><span style="font-family: XWingShip;">&nbsp;</span></div><img class="hidden" src="images/xws-obstacles.png">
+</script></body></html><div id="xws"></div><div class="font-hax"><span style="font-family: BankGothicHD;">&nbsp;</span><span style="font-family: kimberley;">&nbsp;</span><span style="font-family: XWing;">&nbsp;</span><span style="font-family: XWingShip;">&nbsp;</span></div>
